--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
       <version>${scala.version}</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.scala-lang.modules/scala-swing -->
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-swing_${scala.compat.version}</artifactId>
+      <version>2.1.1</version>
+    </dependency>
+
     <!-- Spark core 基础使用 -->
     <dependency>
       <groupId>org.apache.spark</groupId>
