测试 SparkSQL 读写 OceanBase

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
 <!--      <version>2.7.4</version>-->
 <!--    </dependency>-->
 
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.31</version>
+    </dependency>
+
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
