--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,14 @@
 
     <fastjson.version>1.2.76</fastjson.version>
 
-    <spark.version>2.3.2.3.1.4.0-315</spark.version>
+<!--    <spark.version>2.3.2.3.1.4.0-315</spark.version>-->
+<!--    <hadoop.version>3.1.1.3.1.5.0-152</hadoop.version>-->
+<!--    <hive.version>3.1.0.3.1.5.0-152</hive.version>-->
+
+    <spark.version>2.4.8</spark.version>
+    <hadoop.version>2.7.3</hadoop.version>
+    <hive.version>3.1.0</hive.version>
+
 
     <phoenix.version>dora-fix-5.0.0.3.1.4.0-315</phoenix.version>
     <phoenix-spark.version>5.0.0.3.1.4.0-315</phoenix-spark.version>
@@ -78,6 +85,37 @@
       <artifactId>spark-yarn_${scala.compat.version}</artifactId>
       <version>${spark.version}</version>
     </dependency>
+
+    <!--  Spark Hive  -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-hive_${scala.compat.version}</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
+
+    <!--  Hadoop  -->
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client</artifactId>
+      <version>${hadoop.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-hdfs</artifactId>
+      <version>${hadoop.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>${hadoop.version}</version>
+    </dependency>
+
+    <!--  Hive  -->
+<!--    <dependency>-->
+<!--      <groupId>org.spark-project.hive</groupId>-->
+<!--      <artifactId>hive-exec</artifactId>-->
+<!--      <version>1.21.2.3.1.4.83-4</version>-->
+<!--    </dependency>-->
 
     <!-- Phoenix -->
     <dependency>
