修改依赖作用范围；修改打包 jar 文件名

--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,6 @@
       <groupId>org.apache.phoenix</groupId>
       <artifactId>phoenix-spark</artifactId>
       <version>${phoenix-spark.version}</version>
-      <scope>provided</scope>
     </dependency>
 
 <!--    <dependency>-->
@@ -188,6 +187,7 @@
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
+    <finalName>${artifactId}</finalName>
     <plugins>
       <plugin>
         <!-- see http://davidb.github.com/scala-maven-plugin -->
