--- a/src/main/resources/demo.properties
+++ b/src/main/resources/demo.properties
@@ -1,13 +1,16 @@
-zkUrl=jdbc:phoenix:nn,snn,dn0:/hbase-unsecure
-
-select.month=7
-
 hive.table=hn_test.his_02004_2022_p_orc
+hive.select.month=7
 
+phoenix.zkUrl=jdbc:phoenix:nn,snn,dn0:/hbase-unsecure
 phoenix.table=test.HIS_02004_2022
 
-obUrl=jdbc:mysql://10.10.53.25:2883/test?useLocalSessionState=true&allowBatch=true&allowMultiQueries=true&rewriteBatchedStatements=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&max_allowed_packet=41943040
+ob.url=jdbc:mysql://10.10.53.25:2883/test?useLocalSessionState=true&allowBatch=true&allowMultiQueries=true&rewriteBatchedStatements=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&max_allowed_packet=41943040
+ob.username=root@dora#obcluster
+ob.password=ThtfA25__600100
 ob.table=his_02004_2022
-ob.packet=41943040
 ob.save.mode=Overwrite
+ob.packet=41943040
+
+
+
 
