--- a/src/main/resources/demo.properties
+++ b/src/main/resources/demo.properties
@@ -11,6 +11,13 @@ ob.table=his_02004_2022
 ob.save.mode=Overwrite
 ob.packet=41943040
 
+doris.url=jdbc:mysql://10.10.53.139:9030/test
+doris.username=root
+doris.password=Thtf600100
+doris.table=his_02004_2022
+doris.fenodes=10.10.53.139:8030
+doris.db.table=test.his_02004_2022
+doris.save.mode=Append
 
 
 
