提取常用配置变量

--- a/src/main/resources/demo.properties
+++ b/src/main/resources/demo.properties
@@ -1,4 +1,5 @@
 hive.table=hn_test.his_02004_2022_p_orc
+hive.save.mode=Append
 hive.select.month=7
 
 phoenix.zkUrl=jdbc:phoenix:nn,snn,dn0:/hbase-unsecure
