添加 Doris 读取相关配置

--- a/src/main/resources/demo.properties
+++ b/src/main/resources/demo.properties
@@ -19,6 +19,7 @@ doris.table=his_02004_2022
 doris.fenodes=10.10.53.139:8030
 doris.db.table=test.his_02004_2022
 doris.save.mode=Append
-
+doris.request.tablet.size=4
+doris.batch.size=8192
 
 
