修改 OB 测试库名称

--- a/src/main/resources/demo.properties
+++ b/src/main/resources/demo.properties
@@ -5,19 +5,19 @@ hive.select.month=7
 phoenix.zkUrl=jdbc:phoenix:nn,snn,dn0:/hbase-unsecure
 phoenix.table=test.HIS_02004_2022
 
-ob.url=jdbc:mysql://10.10.53.25:2883/test?useLocalSessionState=true&allowBatch=true&allowMultiQueries=true&rewriteBatchedStatements=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&max_allowed_packet=41943040
+ob.url=jdbc:mysql://10.10.53.25:2883/hn?useLocalSessionState=true&allowBatch=true&allowMultiQueries=true&rewriteBatchedStatements=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&max_allowed_packet=41943040
 ob.username=root@dora#obcluster
 ob.password=ThtfA25__600100
-ob.table=his_02004_2022
+ob.table=his_02004_2021
 ob.save.mode=Overwrite
 ob.packet=41943040
 
 doris.url=jdbc:mysql://10.10.53.139:9030/test
 doris.username=root
 doris.password=Thtf600100
-doris.table=his_02004_2022
+doris.table=his_02004_2021
 doris.fenodes=10.10.53.139:8030
-doris.db.table=test.his_02004_2022
+doris.db.table=test.his_02004_2021
 doris.save.mode=Append
 doris.request.tablet.size=4
 doris.batch.size=8192
