测试 jdbc 批量拉取

--- a/src/main/resources/demo.properties
+++ b/src/main/resources/demo.properties
@@ -5,7 +5,8 @@ hive.select.month=7
 phoenix.zkUrl=jdbc:phoenix:nn,snn,dn0:/hbase-unsecure
 phoenix.table=test.HIS_02004_2022
 
-ob.url=jdbc:mysql://10.10.53.25:2883/hn?useLocalSessionState=true&allowBatch=true&allowMultiQueries=true&rewriteBatchedStatements=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&max_allowed_packet=41943040
+# ob.url=jdbc:mysql://10.10.53.25:2883/hn?useLocalSessionState=true&allowBatch=true&allowMultiQueries=true&rewriteBatchedStatements=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&max_allowed_packet=41943040
+ob.url=jdbc:mysql://10.10.53.25:2883/hn?rewriteBatchedStatements=TRUE&allowMultiQueries=TRUE&useLocalSessionState=TRUE&useUnicode=TRUE&characterEncoding=utf-8&socketTimeout=3000000&connectTimeout=60000&useCursorFetch=true&fetchSize=50000 
 ob.username=root@dora#obcluster
 ob.password=ThtfA25__600100
 ob.table=his_02004_2021
